# connector-fbads-v2

./: .replit  README.md  main.py  meta.json  pyproject.toml
playground/: base_function.py  synsc_facebook_ads.py
static/: index-ByELVAV4.js  index-DudOKrpZ.css  index.css  index.js  meta.json  style.css
templates/: form.html  index.html  test.html  v1-fbads.html
v1/controllers/: synsc_facebook_ads.py
